# MSc-Project-2018

./: .gitignore  README.md
Kinect-Tracker/: .gitignore  CMakeLists.txt  README.md  build.py
Kinect-Tracker/cmake/: FindOpenCVBinFiles.cmake
Kinect-Tracker/scripts/builder/: __init__.py  build_project.py
Kinect-Tracker/src/: main.cpp
Kinect-Tracker/src/HandTrackerLib/: CMakeLists.txt  Hand.cpp  HandTracker.cpp  HandTrackerLib.cpp  KinectManager.cpp  Unity.cpp
Kinect-Tracker/src/HandTrackerLib/include/: Hand.h  HandTracker.h  HandTrackerLib.h  KinectManager.h  KinectTypes.h  Unity.h  stdafx.h
Kinect-Tracker/src/HandTrackerLib/unity/: HandTracker.cs  README.txt
Kinect-Tracker/src/HandTracking/: CMakeLists.txt  SDL.cpp  TestApp.cpp
Kinect-Tracker/src/QR/: CMakeLists.txt  video.cpp
Kinect-Tracker/src/exampleLib/: CMakeLists.txt  NumberComputer.cpp
Kinect-Tracker/src/exampleLib/include/: NumberComputer.hpp
Urban-Planner/: CMakeLists.txt  README.md  build.py
Urban-Planner/Unity/: .gitignore  Unity.VC.db
Urban-Planner/Unity/Assets/: .gitignore  DemoTree.unity  Garden Design.unity  HandTracker.cs  HandTrackerUnity.unity  QR_API.cs  maintest.cs
Urban-Planner/Unity/Assets/Resources/Material/: CameraPanel.mat
Urban-Planner/Unity/Assets/Resources/Materials/: PureBlack.mat
Urban-Planner/Unity/Assets/Scripts/: CameraSwitch.cs  MainManager.cs  Rock_group2.cs  TestTreeScrept.cs
Urban-Planner/Unity/Assets/TreesBushesTerrain/Nature/: tree01.prefab  tree02.prefab
Urban-Planner/Unity/Assets/TreesBushesTerrain/Scene/: Have fun.unity
Urban-Planner/Unity/Assets/Wooden ParkChair 123/: WoodenParkChair_D1.prefab  WoodenParkChair_D2.prefab
Urban-Planner/Unity/Assets/Wooden ParkChair5/: parkchair_D2.prefab
Urban-Planner/Unity/Assets/WoodenParkChair123/: WoodenParkChair.prefab
Urban-Planner/Unity/Assets/WoodenParkChair4/: DemoScene.unity
Urban-Planner/Unity/Assets/WoodenParkChair5/: parkchair_D1.prefab
Urban-Planner/Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt
Urban-Planner/cmake/: FindUnityGame.cmake
Urban-Planner/licenses/: BSD-3-license.txt
Urban-Planner/scripts/: installer.nsi
Urban-Planner/src/: main.cpp
Urban-Planner/src/qr-tracker-lib/: CMakeLists.txt  qrtracker.cpp
Urban-Planner/src/qr-tracker-lib/include/: qrtracker.hpp
Urban-Planner/unity/: README.txt
Urban-Planner/unity/Assets/: Main.unity
Urban-Planner/unity/Assets/Editor/: GetUnityVersion.cs
Urban-Planner/unity/Assets/Scripts/: Test.cs
